# BLED112_SensorData_Embedded_Linux

./: .gitignore  README.md
ble_host_code/: CMakeLists.txt  README.md  cmd_def.c  cmd_def.h  encrypt.c  encrypt.h  main.c  profile.c  profile.h  stubs.c  timer.h_  uart.c  uart.h  update_thread.c  update_thread.h
configuration_files/: data.dat_  setup.txt  xml.xml
custom_profile_firmware/: attributes.txt  bgdemo.bgs  config.xml  gatt.xml  out-ble112.hex  readme.txt  variable_memory_usage.txt
custom_profile_firmware/camera/: README.md
learn_cmake/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
learn_cmake/Testing/Temporary/: CTestCostData.txt
learn_cmake/additionlib/: CMakeCache.txt  Makefile  cmake_install.cmake
learn_cmake/subtractionlib/: Makefile  cmake_install.cmake
samples/: xml_parsing.c
samples/BLED112/: BLED112_project.bgproj  config.xml  gattBLED112.xml  hardware.xml  iBeacon.bgs  iBeacon_BLED112.hex  variable_memory_usage.txt
samples/bglib/: cmd_def.c  cmd_def.h  commands.c
samples/ble_host_code_old/: CMakeLists.txt  README  cmd_def.h  encrypt.c  encrypt.h  main.c  profile.c  profile.h  stubs.c  timer.c_  update_thread.c  update_thread.h
samples/bluegiga/20130611_Hands_On_Workshop/BLE_Projects/custom_advertisement/: custom_advertisement.bgs
samples/custom_profile_firmware_old/camera/: README  attributes.txt  gatt.xml  hardware.xml  out-ble112.hex  v4_uuids_descriptor.txt  variable_memory_usage.txt
samples/readline/: read_line.c
